--- a/notes.org
+++ b/notes.org
@@ -210,3 +210,43 @@ export class RecipeListComponent {
     </div>
 </div>
 #+END_SRC
+
+* How I Added Recipe Details To The 'recipe-detail.component.html' File
+I added Bootstrap styling to the 'recipe-detail.component.html' file which includes the recipe name, a menu button to manage recipes, its description, and the related ingredients:
+#+BEGIN_SRC html
+<div class="row">
+    <div class="col-xs-12">
+        <img src="" alt="" class="img-responsive">
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        <h1>Recipe Name</h1>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        <div class="btn-group">
+            <button 
+                type="button" 
+                class="btn btn-primary dropdown-toggle">Manage Recipe <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu">
+                <li><a href="#">Shopping List</a></li>
+                <li><a href="#">Edit Recipe</a></li>
+                <li><a href="#">Delete Recipe</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        Description
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        Ingredients
+    </div>
+</div>
+#+END_SRC
