Adding 'shopping-edit.component.html' file to add corresponding form to add shopping cart components

--- a/notes.org
+++ b/notes.org
@@ -337,3 +337,31 @@ I then made the following revisions to the 'src/app/shopping-list/shopping-list.
     </div>
 </div>
 #+end_src
+
+* How I Changed The 'shopping-edit.component.html' File
+I added the following to the 'app/shopping-list/shopping-edit/shopping-edit.component.html' file to add HTML styling to include a related form:
+#+begin_src html
+<div class="row">
+    <div class="col-xs-12">
+        <form>
+            <div class="row">
+                <div class="col-sm-5 form-group">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" class="form-control">
+                </div>
+                <div class="col-sm-2 form-group">
+                    <label for="amount">Amount</label>
+                    <input type="number" id="amount" class="form-control">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12">
+                    <button class="btn btn-success" type="submit">Add</button>
+                    <button class="btn btn-danger" type="button">Delete</button>
+                    <button class="btn btn-primary" type="submit">Clear</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+#+end_src
